--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.7.1"
   },
   "scripts": {
-    "lint": "eslint --ext .html,.js,.vue --max-warnings=0 ."
+    "eslint-fix": "eslint . --fix"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
